--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,8 @@ body {
   .logo img {
     height: 80px;
   }
+  
+
 }
 @media only screen and (max-width: 600px) {
   .logo {
@@ -29,6 +31,11 @@ body {
   }
   .logo img {
     height: 70px;
+  }
+  .header{
+    flex-direction: column;
+  flex-wrap: wrap;
+  text-align: center;
   }
 }
 
@@ -77,8 +84,8 @@ textarea {
   content: "";
   background-color: var(--secondary-color);
   display: block;
-  width: 100%;
   height: 1px;
+  width: 99%;
 }
 
 input,
@@ -109,3 +116,4 @@ input[name="inputDate"],
 input[name="observerSign"] {
   background-color: transparent !important;
 }
+  
