--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,14 +13,14 @@ body {
   font-family: "Cairo", sans-serif;
 }
 .logo img {
-  height: 100px;
+  height: 80px;
 }
 @media only screen and (max-width: 900px) {
   .logo {
     margin-left: 15%;
   }
   .logo img {
-    height: 80px;
+    height: 70px;
   }
   
 
@@ -30,7 +30,7 @@ body {
     margin-left: 10%;
   }
   .logo img {
-    height: 70px;
+    height: 60px;
   }
   .header{
     flex-direction: column;
@@ -74,7 +74,13 @@ input {
 }
 label,
 p {
-  font-size: 13px !important;
+  font-size: 11px !important;
+}
+h6{
+  font-size: 13px;
+}
+h5{
+  font-size: 20px;
 }
 textarea {
   resize: none;
